--- a/lenddosdk/src/main/res/layout/layout_upload_progress_bar.xml
+++ b/lenddosdk/src/main/res/layout/layout_upload_progress_bar.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:layout_margin="16dp"
             android:gravity="center"
-            android:text="@string/uploading"
+            android:text="@string/processing"
             android:textAlignment="center"
             android:textColor="#FFFFFFFF"
             android:textSize="20sp" />
